Add typescript and basic navigation

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ShearesApp",
-    "slug": "ShearesApp",
+    "name": "ShearesAppFrontend",
+    "slug": "ShearesAppFrontend",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
