--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.72.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "tamagui": "^1.71.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
