--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "tamagui": "^1.71.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
