Add google auth

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,12 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
+google-services.json
 
 # typescript
 *.tsbuildinfo
+
+eas.json
+android/
+ios/
