--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@tamagui/config": "^1.79.19",
     "@types/react": "~18.2.14",
     "axios": "^1.5.1",
     "expo": "^49.0.11",
@@ -30,6 +31,7 @@
     "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "tamagui": "^1.79.19",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
