--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "prettier": "3.1.1"
   },
   "private": true
 }
