--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.20",
     "@tamagui/config": "^1.79.19",
     "@types/react": "~18.2.14",
     "axios": "^1.5.1",
