--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.20",
-    "@tamagui/config": "^1.79.19",
+    "@tamagui/config": "^1.84.0",
+    "@tamagui/lucide-icons": "^1.84.0",
     "@types/react": "~18.2.14",
     "axios": "^1.5.1",
     "expo": "^49.0.11",
@@ -32,7 +33,8 @@
     "react-native-dotenv": "^3.4.9",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "tamagui": "^1.79.19",
+    "react-native-svg": "^14.1.0",
+    "tamagui": "^1.84.0",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
