--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-web-browser": "~12.3.2",
     "firebase": "^10.4.0",
     "react": "18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-native": "0.72.4",
     "react-native-calendars": "^1.1303.0",
     "react-native-dotenv": "^3.4.9",
