--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "^7.2.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.20",
@@ -33,9 +34,11 @@
     "react-native": "0.72.6",
     "react-native-calendars": "^1.1303.0",
     "react-native-dotenv": "^3.4.9",
+    "react-native-feather": "^1.1.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.3",
     "tamagui": "^1.84.0",
     "typescript": "^5.1.3"
   },
