--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ google-services.json
 eas.json
 android/
 ios/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
