--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tamagui/lucide-icons": "^1.84.0",
     "@types/react": "~18.2.14",
     "axios": "^1.5.1",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "^49.0.11",
     "expo-application": "~5.3.0",
     "expo-auth-session": "~5.0.2",
@@ -37,6 +38,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^10.0.3",
     "tamagui": "^1.84.0",
